<resources>
    <string name="app_name">UGBfood</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_restos_prives">RestosPrivesActivity</string>
    <string name="title_activity_aide">aideActivity</string>
    <string name="a_propos">A propos de l\'application</string>
    <string name="A_propos">A propos</string>
    <string name="desc_resto_prive">Les menus des restaurants privés</string>
    <string name="desc_resto_public">Les menus des restaurants public</string>
    <string name="title_public">Public</string>
    <string name="title_prive">Privé</string>
    <string name="desc_se_connecter">Connecter pour faire ses commandes</string>
    <string name="title_se_connecter">Se connecter</string>
    <string name="conec_Identifiant">Identifiant</string>
    <string name="connec_Se_Connecter">Se Connecter</string>
    <string name="remember">Se souvenir de moi</string>
    <string name="connec_Creer_compte">Creer compte</string>
    <string name="connec_forget">Mot de passe oublié?</string>
    <string name="Bienvenue">Bienvenue sur UGBfood</string>
    <string name="menu_dejeuner">C\'est bon</string>
    <string name="menu_fastfood">Pizza</string>
    <string name="menu_diner">Poulet Brisé</string>
    <string name="price1">1.200Fcfa</string>
    <string name="price2">2.500Fcfa</string>
    <string name="price3">1.600Fcfa</string>
    <string name="txt_cnfrm">confiermez votre mot de passe</string>
    <string name="inscription">Inscription</string>
    <string name="identifiant">Identifiant</string>
    <string name="exmple_txt">Ex:beni@exemple.com</string>
    <string name="tel_txt">+221 78 434 36 97</string>
    <string name="s_inscrire">S\'INSCRIRE</string>
    <string name="Copyright_txt">La conception et le design de cette application ont été faits par <b>Team1UGB</b> avec l\'aide du <b><i>Dr. Christelle Scharff</i></b></string>
    <string name="Copyright_txt2">Cette application n\'est affiliée à aucune entreprise ou structure du genre \n Le logo est fait par <i>Team1UGB</i> et les autres images ont été telechargées sur <b><i>Pintres</i></b></string>
    <string name="version_app">UGBfood v1.0.0</string>
</resources>
