<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.beniapp.ugbfood.inscriotion__">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:background="@drawable/fond"
        android:paddingTop="16dp"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            android:shadowColor="@color/colorAccent"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:text="@string/inscription"
            android:textSize="35dp"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70dp"
                    android:background="@drawable/edit_round"
                    android:drawableLeft="@drawable/ic_person_black_24dp"
                    android:drawablePadding="12dp"
                    android:ems="10"
                    android:hint="@string/identifiant"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColorHint="#fff" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70dp"
                    android:background="@drawable/edit_round"
                    android:drawableLeft="@drawable/ic_mail_black_24dp"
                    android:drawablePadding="12dp"
                    android:ems="10"
                    android:hint="@string/exmple_txt"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColorHint="#fff" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70dp"
                    android:background="@drawable/edit_round"
                    android:drawableLeft="@drawable/ic_lock_black_24dp"
                    android:drawablePadding="12dp"
                    android:ems="10"
                    android:hint="************"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColorHint="#fff" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70dp"
                    android:background="@drawable/edit_round"
                    android:drawableLeft="@drawable/ic_lock_black_24dp"
                    android:drawablePadding="12dp"
                    android:ems="10"
                    android:hint="@string/txt_cnfrm"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColorHint="#fff" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70dp"
                    android:background="@drawable/edit_round"
                    android:drawableLeft="@drawable/ic_phone_black_24dp"
                    android:drawablePadding="12dp"
                    android:ems="10"
                    android:hint="@string/tel_txt"
                    android:inputType="number"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:layout_marginBottom="10dp"
                    android:textColorHint="#fff" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/insbtn"
                android:background="@drawable/buttonroundblue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s_inscrire"
                android:textColor="@color/white" />
        </LinearLayout>


    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
