<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.beniapp.ugbfood.Home_activity">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/littlegrey">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collabs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/thieb_ndar"
                app:contentScrim="@color/colorAccent"
                app:expandedTitleMarginEnd="64dp"
                app:expandedTitleMarginStart="45dp"
                app:layout_scrollFlags="exitUntilCollapsed|scroll"
                app:title="Accueil">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolsbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:id="@+id/ll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#fcfcfc"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <android.support.v7.widget.CardView
                        android:id="@+id/clk_resto_public"
                        android:layout_width="160dp"
                        android:layout_height="160dp"
                        android:layout_margin="10dp"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/img_pub"
                                android:layout_width="64dp"
                                android:layout_height="64dp"
                                android:background="@drawable/rondbackgroundrose"
                                android:padding="10dp"
                                android:src="@drawable/ic_public_black_24dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:text="@string/title_public"
                                android:textColor="@color/colorPrimaryDark"
                                android:textStyle="bold" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_margin="10dp"
                                android:background="@color/littlegrey" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:padding="5dp"
                                android:text="@string/desc_resto_public"
                                android:textColor="@android:color/darker_gray" />

                        </LinearLayout>
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/clk_resto_prive"
                        android:layout_width="160dp"
                        android:layout_height="160dp"
                        android:layout_margin="10dp"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="64dp"
                                android:layout_height="64dp"
                                android:background="@drawable/rondbackgroundmauvefonce"
                                android:padding="10dp"
                                android:src="@drawable/ic_prive" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:text="@string/title_prive"
                                android:textColor="@color/colorRoseFonce"
                                android:textStyle="bold" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_margin="10dp"
                                android:background="@color/littlegrey" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:padding="5dp"
                                android:text="@string/desc_resto_prive"
                                android:textColor="@android:color/darker_gray" />

                        </LinearLayout>
                    </android.support.v7.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <android.support.v7.widget.CardView
                        android:id="@+id/clk_se_connecter"
                        android:layout_width="160dp"
                        android:layout_height="160dp"
                        android:layout_margin="10dp"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="64dp"
                                android:layout_height="64dp"
                                android:background="@drawable/rondbackgroundmauvefonce"
                                android:padding="10dp"
                                android:src="@drawable/connecter_24dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:text="@string/title_se_connecter"
                                android:textColor="@color/colorRoseFonce"
                                android:textStyle="bold" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_margin="10dp"
                                android:background="@color/littlegrey" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:padding="5dp"
                                android:text="@string/desc_se_connecter"
                                android:textColor="@android:color/darker_gray" />

                        </LinearLayout>
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/clk_creer_compte"
                        android:layout_width="160dp"
                        android:layout_height="160dp"
                        android:layout_margin="10dp"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="64dp"
                                android:layout_height="64dp"
                                android:background="@drawable/rondbackgroundorange"
                                android:padding="10dp"
                                android:src="@drawable/help" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:text="@string/A_propos"
                                android:textStyle="bold" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_margin="10dp"
                                android:background="@color/littlegrey" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:padding="2dp"
                                android:text="@string/a_propos"
                                android:textColor="@android:color/darker_gray" />

                        </LinearLayout>
                    </android.support.v7.widget.CardView>

                </LinearLayout>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>


</android.support.v4.widget.DrawerLayout>